--- a/app/views/lis/8/start.html
+++ b/app/views/lis/8/start.html
@@ -11,56 +11,46 @@
       <div class="text">
         
         <div class="heading-group">
-          <h1 class="heading-xlarge">Apply for help with health costs</h1>
+          <h1 class="heading-xlarge">Get help with health costs</h1>
           <h2 class="heading-large">The low income scheme</h2>
         </div>
         
-        <p>You could get help towards:
-          
-        <ul class="list list-bullet">
-          <li>NHS Prescriptions;</li>
-          <li>NHS Dental treatment;</li>
-          <li>sight tests, glasses and contact lenses;</li>
-          <li>NHS wigs and fabric supports;</li>
-          <li>travel to receive NHS treatment (when referred by a GP or hospital doctor, dentist or optician)</li>
-        </ul>
-
-        <p>If you have a low amount of money to live on after your housing costs and you or your partner (or both) have less than:</p>
+        <p>You can already claim help with health costs if you have an NHS Tax Credit Exemption Certificate or get any of these benefits:</p>
         
         <ul class="list list-bullet">
-          <li>£16,000 in savings, investments or properties (not counting the place where you live); or</li>
+          <li>Income Support</li>
+          <li>Pension Credit Guarantee Credit</li>
+          <li>Universal Credit</li>
+        </ul>
+
+        <p><a href="#">What you need to do if you are already able to get help.</a></p>
+
+        <h2 class="heading-large">If you need to apply for help</h2>
+
+        <p>You could get help with your health costs if, after your housing costs, you, your partner, or you both have less than:</p>
+        
+        <ul class="list list-bullet">
+          <li>£16,000 in savings, investments or properties – not including where you live</li>
           <li>£23,250 in savings, investments or properties if you permanently live in a care home</li>
         </ul>
-        
+
+        <p>You could get help towards your, your partner’s and your children’s:</p>
+
+        <ul class="list list-bullet">
+          <li>NHS dental treatment</li>
+          <li>NHS prescriptions</li>
+          <li>NHS wigs and fabric supports</li>
+          <li>sight tests, glasses and contact lenses</li>
+          <li>travel to receive NHS treatment if you were referred by a GP, hospital doctor, dentist or optician</li>
+        </ul>
+
         <p>You can apply at any time. Do not wait until you need treatment.</p>
 
-        <hr>
         <p>
           <a class="button button-get-started" href="ko" id="next">Start a new application</a>
         </p>
+        
         <a href="signin-continue">I've used this service before - view my application</a>
-        <hr>
-        
-        <h3 class="heading-medium">You may already be entitled to help with health costs if you receive any of the following:</h3>
-            
-        <ul class="list list-bullet">
-          <li>income support;</li>
-          <li>pension credit guarantee credit;</li>
-          <li>universal credit; or</li> 
-          <li>you are named on, or entitled to, an NHS Tax Credit exemption certificate</li>
-        </ul>
-        
-        <p>
-          <a href="" id="next">What to do if one of the above applies to you</a>
-        </p>
-        
-        <h2 class="heading-medium">You can claim for:</h2>
-              
-        <ul class="list list-bullet">
-          <li>yourself;</li>
-          <li>your partner; or</li>
-          <li>your children</li>
-        </ul>
                  
       </div>
       
