--- a/app/views/lis/8/savings.html
+++ b/app/views/lis/8/savings.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do {{partnerortext}} have less than  £16,000 in savings, investments and properties?
+    Do {{partnerbothtext}} have less than  £16,000 in savings, investments and properties?
   </h1>
       
   <p>Property does not include where you live.</p>
